# llms-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
chatgpt/: Cargo.toml
chatgpt/src/: ask.rs  error.rs  lib.rs  types.rs  utils.rs
chatgpt/src/tests/: ask.rs
chatgpt/src/types/: request.rs  response.rs  sessions.rs
gemini/: CHANGELOG.md  Cargo.toml  README.md
gemini/examples/: basic_chat.rs  context_caching.rs  function_calling.rs  multimodal.rs  streaming.rs  structured_output.rs  thinking.rs
gemini/gemini-proc-macros/: Cargo.toml  README.md
gemini/gemini-proc-macros/src/: lib.rs
gemini/src/: gemini.rs  lib.rs  utils.rs
gemini/src/gemini/: ask.rs  error.rs  tests.rs  types.rs  utils.rs
gemini/src/gemini/tests/: ask.rs  caching_tests.rs  error.rs  utils.rs
gemini/src/gemini/types/: caching.rs  request.rs  response.rs  sessions.rs
gemini/src/gemini/types/request/: chat.rs
gemini/src/gemini/utils/: macros.rs
gemini/src/tests/: utils.rs
gemini/tests/: ask.rs  execute_with_callback.rs  function_calling.rs  schema_test.rs
src/: chatgpt.rs  gemini.rs  lib.rs
src/chatgpt/: ask.rs  types.rs
src/chatgpt/tests/: ask.rs
src/gemini/: ask.rs  types.rs  utils.rs
src/gemini/tests/: ask.rs  utils.rs
tests/: chatgpt.rs  gemini.rs
