[package]
name = "llms-client"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
awc = { version = "3", features = ["rustls"] }
base64 = "0.22.1"
derive-new = "0.7.0"
futures = "0.3.31"
pin-project-lite = "0.2.16"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
