[package]
name = "chatgpt-client-api"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Suryansh-Dey/llms-client"
authors = ["Suryansh Dey suryanshdey@gmail.com"]
keywords = ["OpenAI", "ChatGPT", "SDK", "client", "API"]
categories = ["web-programming", "asynchronous"]
description = "ChatGPT client with sessions and streaming, mirroring the Gemini client API."
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
derive-new = "0.7.0"
futures = "0.3"
getset = "0.1.5"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
