[package]
name = "gemini-client-api"
version = "5.6.2"
edition = "2024"
repository = "https://github.com/Suryansh-Dey/llms-client"
authors = ["Suryansh Dey suryanshdey@gmail.com"]
keywords = ["Gemini", "SDK", "client", "API", "AI"]
categories = ["web-programming", "asynchronous"]
description = "Library to use Google Gemini API's all tools(code, search, function calling) even with streaming. Automatic context management!"
readme = "README.md"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
base64 = "0.22.1"
derive-new = "0.7.0"
futures = "0.3.31"
getset = "0.1.5"
pin-project-lite = "0.2.16"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["fs", "macros"] }
mime = "0.3.17"
