[package]
name = "gemini-client-api"
version = "7.4.5"
edition = "2024"
repository = "https://github.com/Suryansh-Dey/llms-client"
authors = ["Suryansh Dey <suryanshdey@gmail.com>"]
keywords = ["Gemini", "SDK", "client", "API", "AI"]
categories = ["web-programming", "asynchronous"]
description = "Library to use Google Gemini API. Automatic context management, schema generation, function calling and more."
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] , optional = true}
bytes = "1"
base64 = "0.22"
derive-new = "0.7"
futures = "0.3"
getset = "0.1"
pin-project-lite = "0.2"
regex = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["fs", "macros", "rt-multi-thread"], optional = true }
mime = "0.3"
gemini-proc-macros = { version = "1.1.2", path = "./gemini-proc-macros" }
thiserror = "2.0"

[features]
default = ["full", "rustls"]
full = ["tokio", "reqwest"]
tokio = ["dep:tokio"]
reqwest = ["dep:reqwest"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
