[package]
name = "gemini-proc-macros"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/Suryansh-Dey/llms-client"
authors = ["Suryansh Dey suryanshdey@gmail.com"]
description = "Procedural macros for gemini-client-api"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
serde_json = "1.0"
